<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="fbGetNextLine" Id="{ed579def-e5f5-4068-8ba2-ec7fe6432382}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM fbGetNextLine

VAR_OUTPUT
	arrRecords: ST_ProgramStruct;
	sSeverity: WSTRING(255);
	bError :BOOL;
	iLines: UDINT;
END_VAR
VAR
	STProgram: ST_ProgramStruct;
	now : TIMESTRUCT;
	nowMinutes : LINT;
	fbTON: TON := (PT := TIME#10S0MS);

	fbPLCDBRead : FB_PLCDBRead(sNetID:='',tTimeout:=T#5S);
	fbSqlCommand : FB_SQLCommand(sNetID := '', tTimeout := T#5S);
	
	
	intTime: DINT;
	todTime: TOD;

	sCmd: STRING(255);

	dIntSqlResult: DINT;
	fbSQLDatabase: FB_SQLDatabase(sNetID:='', tTimeout:=T#10S);
	fbSQLResult: FB_SQLResult(sNetID:='', tTimeout:=T#10S);
	result: I_TcResultEvent;


	iState: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Build command


now := GVL.fbLocalSystemTime.systemTime;
nowMinutes := now.wHour*60+now.wMinute;


sCmd :=CONCAT('SELECT * FROM [Programs] WHERE [ProgramNameID]=',LINT_TO_STRING(GVL.CurrentProgram));

sCmd :=CONCAT(sCmd,' AND [time]>');

sCmd := CONCAT(sCMD,LINT_TO_STRING(nowMinutes));

sCmd:= CONCAT(sCMD,' ORDER BY [time] ASC');
//State machine
CASE iState OF
0:
//IDLE
fbTON();
IF fbTON.Q=TRUE THEN
	iState:=1;
	fbTON.IN:=FALSE;
	bError := FALSE; 
ELSE
	fbTON.IN:=TRUE;
END_IF
//Connect
1:
	IF fbSqlDatabase.Connect(1) THEN
		IF fbSqlDatabase.bError THEN
			iState := 255;
			result := fbSqlDatabase.ipTcResultEvent;
			sSeverity := result.Text;
			bError := TRUE; 		
		ELSE
			//If sucessful, point the connection to the sql command function
			fbSqlDatabase.CreateCmd(ADR(fbSqlCommand));
			iState := 2;
		END_IF
	END_IF
2:
//Send the sql command
	IF fbSQLCommand.ExecuteDataReturn(ADR(sCmd), SIZEOF(sCmd), ADR(fbSqlResult)) THEN
		IF fbSQLCommand.bError THEN
			iState := 255;
			result := fbSQLCommand.ipTcResultEvent;
			sSeverity := result.Text;
			bError := TRUE;
		ELSE
			iState := 3;
			iLines:=fbSqlResult.nDataCount; 
		END_IF
	END_IF
		
3:
//Read the sql result
	
	IF fbSqlResult.Read(0, 1, ADR(arrRecords), SIZEOF(arrRecords), TRUE, TRUE) THEN
		IF fbSqlResult.bError THEN
			result := fbSqlResult.ipTcResultEvent;
			sSeverity := result.Text;
			iState:=255;
			bError := TRUE;
		ELSE 
			iState:=4;
			
			result := fbSqlResult.ipTcResultEvent;
			sSeverity := result.Text;
		END_IF
	

	END_IF
4:
//Disconnect
	IF 	fbSqlDatabase.Disconnect() THEN
		IF fbSqlDatabase.bError THEN
        	iState := 255;
		ELSE
			iState := 0;
			bError := FALSE;
		END_IF

	END_IF
255:
//Record the error....I need to change this to actually record the errors
		iState:=0;	
		bError := TRUE;
		result := fbSqlResult.ipTcResultEvent;
		sSeverity := result.Text;
		fbSqlDatabase.Disconnect();

END_CASE]]></ST>
    </Implementation>
    <LineIds Name="fbGetNextLine">
      <LineId Id="467" Count="0" />
      <LineId Id="475" Count="1" />
      <LineId Id="522" Count="0" />
      <LineId Id="482" Count="0" />
      <LineId Id="468" Count="2" />
      <LineId Id="257" Count="0" />
      <LineId Id="471" Count="3" />
      <LineId Id="60" Count="3" />
      <LineId Id="300" Count="0" />
      <LineId Id="409" Count="3" />
      <LineId Id="415" Count="0" />
      <LineId Id="413" Count="1" />
      <LineId Id="408" Count="0" />
      <LineId Id="64" Count="3" />
      <LineId Id="155" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="69" Count="12" />
      <LineId Id="167" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="319" Count="0" />
      <LineId Id="523" Count="0" />
      <LineId Id="84" Count="4" />
      <LineId Id="599" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="153" Count="0" />
      <LineId Id="323" Count="2" />
      <LineId Id="321" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="364" Count="0" />
      <LineId Id="310" Count="0" />
      <LineId Id="320" Count="0" />
      <LineId Id="326" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="165" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="312" Count="0" />
      <LineId Id="565" Count="0" />
      <LineId Id="313" Count="0" />
      <LineId Id="559" Count="3" />
      <LineId Id="564" Count="0" />
      <LineId Id="314" Count="0" />
      <LineId Id="316" Count="0" />
      <LineId Id="315" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="536" Count="4" />
      <LineId Id="603" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>